--- a/toggle.html
+++ b/toggle.html
@@ -93,6 +93,35 @@ fieldset.toggle input[type="range"]::-moz-range-thumb {
   background: #ffffff;
 }
 
+/* IE/EDGE - THESE ARE UNTESTED */
+
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 30px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  border: 2px solid #000000;
+  border-radius: 60px;
+  background: #f2f2f2;
+}
+input[type=range]::-ms-fill-upper {
+  border: 2px solid #000000;
+  border-radius: 60px;
+  background: #ffffff;
+}
+input[type=range]::-ms-thumb {
+  width: 30px;
+  height: 30px;
+  border: 2px solid #000000;
+  border-radius: 30px;
+  background: #ffffff;
+  cursor: pointer;
+}
+  
 </style>
 
 </head>
