--- a/toggle.html
+++ b/toggle.html
@@ -159,10 +159,10 @@ input[type=range]::-ms-thumb {
  <label for="toggle2" style="color: #f00;">Hotness</label><br />
 
  <button id="toggle3" role="switch" aria-checked="false" class="toggle"><input name="toggle3" type="range" min="0" max="1" step="1" value="0" required /> </button>
- <label for="toggle3" style="color: #0f0;">Contrariness</label><br />
+ <label for="toggle3" style="color: #0f0;">Recalcitrance</label><br />
 
  <button id="toggle4" role="switch" aria-checked="false" class="toggle"><input name="toggle4" type="range" min="0" max="1" step="1" value="0" required /> </button>
- <label for="toggle4" style="color: beige;">Beigeosity</label>
+ <label for="toggle4" style="color: beige;">Beige</label>
 </form>
 
 <p>The only problem? We're back to not being not-so-accessible again. Now, I've gone through and added some ARIA code in for the "switch" role, which I think will help, but I'm not sure that takes care of everything. If you've got some ideas on how to improve it further, <a href="mailto:knave@7415comics.com">I love to hear from you</a>.</p>
