--- a/toggle.html
+++ b/toggle.html
@@ -143,7 +143,7 @@ input[type=range]::-ms-thumb {
 <h1>Range Input as Toggle</h1>
 <h2><a href="https://github.com/mrdestructicity/toggle" target="_blank">(You can also find this at GitHub if you care.)</a></h2>
 
-<p>A lot of the toggles I see implemented on sites are just fancy checkboxes or radio buttons with a ton of Javascript behind them. Which seems crazy to me, and also creates a ton of accessibility issues. But there's no "toggle" input type, so what's a web developer to do?</p>
+<p>A lot of the iOS-style toggles I see implemented on sites are just fancy checkboxes or radio buttons with a ton of Javascript behind them. Which seems crazy to me, and also creates a ton of accessibility issues. But there's no "toggle" input type, so what's a web developer to do?</p>
 
 <p>Then I had a thought. Isn't a toggle just a range slider with values of 0 and 1? Why not just style the heck out of a range slider. There are some great tools out there to do it, like <a href="http://danielstern.ca/range.css">Daniel Stern's range.css CSS Style Generator for Range Inputs</a>. And it worked! Sort of.</p>
 
